# roman

./: .gitignore  Cargo.toml  README.md  TODO.md  index.html
src/: counter.rs  globalcss.rs  homepage.rs  load_sound.rs  main.rs  menu_icon.rs  nonsense.rs  novel_list.rs  novels.rs  p2r_menu.rs  page_counter.rs  roman_macros.rs  setting_menu.rs  sound_button.rs  text_data.rs
src/novels/: enter_code.rs  novel_1.rs  novel_2.rs  novel_3.rs  test_1.rs
