[package]
name = "roman"
version = "0.0.0"
edition = "2024"

[dependencies]
fastrand = { version = "2.3.0" }
anyhow = { version = "1.0.100" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
leptos = { version = "0.8.14", features = ["csr"] }
leptos_router = { version = "0.8.10" }
