[package]
name = "roman"
version = "0.1.0"
edition = "2024"

[dependencies]
nanorand = { version = "0.8.0" }
anyhow = { version = "1.0.100" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.148" }
leptos = { version = "0.8.15", features = ["csr"] }
leptos_router = { version = "0.8.11" }
